--- a/tf.tex
+++ b/tf.tex
@@ -37,7 +37,7 @@ El objetivo de este trabajo es estudiar la descripción hecha por R. Tolimieri \
 
 \end{abstract}
 
-\textcolor{red}{lo mandabamos al final ?}
+\textcolor{red}{agregar palabras clave y el código de clasificación,índice gral}
 \section{Notación}
 \begin{tabular}{ l l }
   $GL(2n,\mathbb{R})$ & Grupo simpléctico\\
@@ -183,17 +183,18 @@ donde $v=(x,y),v'=(x',y') \in \mathbb{C}^n$ y $\psi (v,v')=Im(v.\overline{v'}).$
 
 El centro de $H_{n}$ viene dado por Z=(0,t), t $\in \mathbb{R}.$
 
-\textcolor{red}{agregar el grupo de automorfismos }
+\textcolor{red}{Ponerlo en una sección aparte.poner $H_n$ con la letra que va, y definir el conmutador  y poner la cuenta de $ghg^{-1} h^{-1}=(0,psi(v,v'))$ }
+\textcolor{red}{para lo del grupo de automorfismos, primero ver como son todos los auto y despues ver que esa se puede formar multiplicando las otras tres}
 \begin{definition}
- Recordemos que un automorfismo $f: H_n \mapsto H_n$ es un isomorfismo lineal tal que 
+ Recordemos que un automorfismo $\Phi: H_n \mapsto H_n$ es un isomorfismo lineal tal que 
  $$\begin{aligned}
     f({[}(v,t),(v',s){]})={[}f(v,t),f(v',s){]}
  \end{aligned}$$
  
- \textcolor{red}{ '[' los corchetes de Lie, puede ser confuso con el conmutador}
+% \textcolor{red}{ '[' los corchetes de Lie, puede ser confuso con el conmutador}
 \end{definition}
 
-Sea $A \in GL(2n,\mathbb{R})$ tal que  $\psi(v,v')=\psi(Av, Av')$, y  $f:H_n \mapsto H_n$ el mapeo
+Sea $A \in GL(2n,\mathbb{R})$ tal que  $\psi(v,v')=\psi(Av, Av')$, y  $f:H_n \mapsto H_n$ la aplicación
 que tiene como matriz asociada 
 $$[f] = 
 \begin{bmatrix}
@@ -203,12 +204,7 @@ A & 0\\
 
 entonces f es un automorfismo, pues,
 
-$$\begin{aligned}
-f((v,t) (v',s))=f(v+v',t+s+ \frac{1}{2} \psi(v,v'))&=\\
-(A(v+v'),t+s+ \frac{1}{2} \psi(v,v'))&=\\
-(Av+Av',t+s+ \frac{1}{2} \psi(Av,Av'))&=\\
-(Av,t)(Av',s)&=f(v,t) f(v',s).\\
-\end{aligned}$$
+
 
 Dado que $A \in GL(2n,\mathbb{R})$, f es biyectiva.
 
@@ -219,13 +215,14 @@ f({[}(v,t),(v',s){]})=f(0,\psi(v,v'))&=\\
 {[}(Av,t),(Av',s){]}&={[}f(v,t),f(v',s){]}.\\
 \end{aligned}$$
 
-Esta última observación motiva la siguiente definición \textcolor{red}{(?)}
+Esta última observación motiva la siguiente definición 
 \begin{definition}
  Definimos el grupo simpléctico $Sp(2n,\mathbb{R})$ como ,
  $$
  Sp(2n,\mathbb{R})=\{ A \in GL(2n,\mathbb{R}): \psi(v,v')=\psi(Av,Av') \forall v,v' \in \mathbb{C}^n\}.
  $$
 \end{definition}
+Observemos que este es el subgrupo de automorfismos que actuan trivialmente ene l centro.
 
 \section{Lattices de $H_n$}
 
@@ -332,41 +329,32 @@ Luego $r=0$, por la elección de $l_1$, esto es $\psi(v_1,v-mv_1')=0$
 \begin{lemma} \label{1.8}
  Un $D \in HL(\mathbb{C}^n)$ se puede escribir como una suma directa $\psi-ortogonal : D=<v_1,v_1'>\oplus<v_2,v_2'>...<v_n,v_n'>$
  de $\mathbb{Z}$-módulos bidimensionales $<v_j,v_j'>$. Sea $l_j=\psi(v_j,v_j')$; entonces la descomposición puede ser tomada 
- de forma tal que $l_j \in \mathbb{R}^{>0}$ y $l_j | l_{j+1}$.
+ de forma tal que $l_j \in \mathbb{R}^{>0}$ y $\frac{l_{j+1}}{l_j}  \in \mathbb{Z}$.
  
  Es más, estos $l_j$ están unívocamente determinados por D.
 \end{lemma}
 
 \begin{proof}
-$\psi(D,D)  = l \mathbb{Z}$. Sin pérdida de generalidad podemos asumir l=1
-Sea $l_1$ el mínimo entero positivo de $\psi(D,D)$, donde $l_1=\psi(v_1,v_1')$ con $v_1,v_1' \in D$. 
+Por el lema \ref{1.7} sabemos que existen $l_1$ entero no negativo y $l \in \mathbb{R}$ tales que  $\psi(D,D)  = l l_1 \mathbb{Z}$. Sin pérdida de generalidad podemos asumir l=1.
+Luego existe $v_1,v_1' \in D$ tal que  $l_1=\psi(v_1,v_1')$.
 
-$v_1,v_1'$ son linealmente independientes. (pues si $v_1'=c v_1 \Rightarrow \psi(v_1,c v_1)=0$ ) entonces tiene sentido
-pensar en el $\mathbb{Z}$-módulo bidimensional $P_1:=<v_1,v_1'>$
+Sea $P_1:=<v_1,v_1'>$ el $\mathbb{Z}$-módulo bidimensional generado por $v_1,v_1'$.
 
 Notar que $$
 \psi|_{<v_1,v_1'>} = \begin{bmatrix}
-                              l_1 & 0 &\\
-                              0 & -l_1 &
+                              0 & l_1 &\\
+                              -l_1 & 0 &
                              \end{bmatrix}
 $$
 
 En la prueba del lema \ref{1.7} vimos que $D=<v_1,v_1'> \oplus <v_1,v_1'>^\bot$.
 
-Como $\psi(P_1^\bot,P_1^\bot) \subseteq \mathbb{Z}$ podemos aplicar el mismo razonamiento del principio a $P_1^\bot$ 
-para obtener los pares $(v_j,v_j')$
-
-Dado que D tiene dimensión finita, obtengo una cantidad finita de pares $v_j,v_j'$, tales que:
+Como $\psi(P_1^\bot,P_1^\bot) \subseteq l_1 \mathbb{Z}$ podemos usar recursivamente el mismo razonamiento anterior 
+para obtener los pares $(v_j,v_j')$, $j=2...m$ tales que 
 $D=<v_1,v_1'>\oplus<v_2,v_2'>...<v_m,v_m'>$
 
-Afirmación: m=n
-
-Sabemos que $m\leq n$, veamos que $m<n$ nos conduce a un absurdo
-
 Si $m<n$ $\Rightarrow \mathbb{R}^{2n}/D=\mathbb{R}^{2n}/\oplus_{i=1}^m P_i \backsimeq \oplus_{i=1}^m (\mathbb{R}^{2n}/P_i) \oplus \mathbb{R}^{2(n-m)} $\newline
-Dado que $m<n \Rightarrow  \mathbb{R}^{2(n-m)}$ no es compacto $\Rightarrow \mathbb{R}^{2n}/D$ no es compacto, absurdo! pues D es un lattice
-
-Fin afirmación
+Luego $\mathbb{R}^{2n}/ D$ no sería compacto , absurdo! pues D es un lattice.
 \newline
 
 
@@ -393,11 +381,9 @@ $\psi(D,D)=\tilde{l}_1 \mathbb{Z}$ $\Rightarrow$ $\tilde{l}_1 | l_1$ y $l_1 | \t
 
 La prueba continua por inducción sobre la dimensión de D.
 
-Caso base: Dim(D)=2
+Para Dim(D)=2 la prueba resulta de la unicidad de $l_1$
 
-Este caso se reduce a lo visto en el párrafo anterior.
-
-Paso inductivo: Dado n $\in \mathbb{N}$ , supongamos que los $l_i$ son únicos para los lattice de Heisenberg de dimensión 2n-2.
+Dado n $\in \mathbb{N}$ , supongamos que los $l_i$ son únicos para los lattice de Heisenberg de dimensión 2n-2.
 Para D con dimensión 2n, defino 
 $$\tilde{D}:=D/(v_1 \mathbb{Z} \oplus v_1' \mathbb{Z})$$
 $\tilde{D}$ es un lattice de Heisenberg, de dimensión 2n-2, por lo que sus $2\leq l_i\leq n$ asociados son únicos
@@ -432,39 +418,10 @@ Sea  $V:= \cup_{i=1}^n \{(v_i,0),(v_i',0)\}$
 
 Defino $\Gamma := <V>=\{(\sum_{i=1}^n a_i v_i + b_i v_i', \frac{1}{2} m l_1):a_i,b_i,m \in \mathbb{Z} \}$
 \newline
+\textcolor{red}{No usar <V>, poner el generado por...}
 
-Afirmación: $\Gamma \in L$
+Es inmediato ver que $\Gamma$ es un subgrupo discreto y que $H_n / \Gamma$ es compacto.
 
-Queremos ver que $[\Gamma,\Gamma] \subseteq \Gamma \cap Z.  $
-Ya sabemos que $[\Gamma,\Gamma] \subseteq Z.$
-
-Sean $h,\tilde{h} \in \Gamma,$
-
-$$ \begin{aligned}
-\left[ h ,\tilde{h} \right] =&\\
-(0,\psi(\sum_{i=1}^n a_i v_i + b_i v_i',\sum_{i=1}^n \tilde{a}_i v_i + \tilde{b}_i v_i'))=&\\
-(0,\sum_{i=1}^n \psi(a_i v_i ,\tilde{b}_i v_i') + \sum_{i=1}^n \psi( b_i v_i',\tilde{a}_i v_i ))=&\\
-(0,\sum_{i=1}^n a_i \tilde{b}_i l_i - b_i \tilde{a}_i l_i)=& (0,\frac{1}{2} (2 \tilde{m})l_1 )
-\end{aligned}$$
-
-$\therefore [\Gamma,\Gamma] \subseteq \Gamma$
-
-
-$H_n / \Gamma$ es compacto,pues 
-
-$H_n / \Gamma = H_n /( D \oplus l \mathbb{Z})=  H_n / (\oplus_{i=1}^n P_i \oplus l \mathbb{Z}) \simeq$
-
-$(\mathbb{R}^{2n} / \oplus_{i=1}^n P_i) \oplus (\mathbb{R} / l \mathbb{Z}) \simeq \oplus_{i=1}^n(\mathbb{R}^2/P_i) \oplus \mathbb{R}/ l \mathbb{Z}$ 
-
- que es compacto.
- 
- En la primera igualdad estoy utilizando el hecho de que:
- 
- $\Gamma = \pi(\Gamma) \oplus \mathbb{R} =\{ \sum_{i=1}^n a_i v_i + b_i v_i': a_i,b_i \in \mathbb{Z} \} \oplus \mathbb{R}=$
- 
- $<v_1,v_1'>\oplus ... \oplus <v_n,v_n'> \oplus \mathbb{R} = \oplus_{i=1}^n P_i \oplus \mathbb{R}= D\oplus \mathbb{R}= D \oplus l \mathbb{Z} $
- 
-Fin Afirmación
  \end{proof}
 
  \begin{corollary}
@@ -477,14 +434,82 @@ Fin Afirmación
 
 \begin{example} 
  Definimos,
- $$Z_n^{\#}:= \{ l=(l_1,l_2,...,l_n) \in \mathbb{N}^n:l_j|l_{j+1} \}$$
+ $$Z_n^{\#}:= \{ \pounds=(l_1,l_2,...,l_n) \in \mathbb{N}^n:l_j|l_{j+1} \}$$
  
- Sea $e_j$, $1\leq j \leq 2n $,  la 2n-upla que consiste de todos ceros excepto por un uno, en el j-èsimo lugar.Para l, definimos:
+ Sea $e_j$, $1\leq j \leq 2n $,  la base canónica de $\mathbb{R}^{2n}$.Para $\pounds$, definimos:
  
- $$D(l):=<e_1,....e_n,l_1 e_{n+1},l_2 e_{n+2}...,l_n e_{2n}>$$
+ $$D(\pounds):=<e_1,....e_n,l_1 e_{n+1},l_2 e_{n+2}...,l_n e_{2n}>$$
   \newpage
  
- Afirmación 1: $D(l) \in HL(\mathbb{C}^n)$ 
+ Se ve facilmente que $\psi(e_j,e_{j+n})=1$ para $j=1...n$
+\end{example}
+
+ Observación: En el lema $\ref{1.8}$ vimos que si $D(\pounds) \in HL(\mathbb{C}^n)$ entonces admitía una descomposición de la forma 
+ $<v_1,v_1'>\oplus ... <v_n,v_n'>= D(\pounds)$
+ 
+ En el ejemplo anterior, $v_i=e_i$ y $v_i'=l_i e_{i+1}$
+ 
+
+\begin{theorem}
+ Para cada $D \in HL(\mathbb{C}^n)$ existe una única $\pounds \in Z_n^{\#}$, un único $d \in \mathbb{R}_{>0}$ y un $\alpha \in SP(2n,\mathbb{R})$ tal que:
+ 
+ $D=\alpha(d D(\pounds))$
+\end{theorem}
+
+\begin{proof}
+ Si $D \in HL(\mathbb{C}^n)$,entonces $ \psi(D,D)=l l_1 \mathbb{Z}$, con $l \in \mathbb{R}_{>0}$ y $l_1 \in \mathbb{N}$
+ Sea $d=\sqrt{l}$. 
+ 
+ Por el lema $\ref{1.8}$, $\tilde{D}:= \frac{1}{d} D =  <v_1,v_1'> \oplus...\oplus <v_n,v_n'>$
+ con los números naturales $l_i=\psi(v_i,v_i')$ univocamente determinados.
+
+ Definimos $\pounds:=(l_1,...,l_n) \in \mathbb{Z}_n^{\#}$
+ 
+ %Sea $v:=(v_1,...,v_n)$ y $v'=(v_1',...,v_n')$
+  
+ 
+ Sea $\alpha$ la transformacion lineal sobre $\mathbb{R}^{2n}$ definida por, 
+ $$
+ \begin{aligned}
+ \alpha(e_j)=v_j,\\
+ \alpha(e_{j+n})=\frac{v_{j+1}}{l_j},\\
+ \end{aligned}$$
+ 
+ con j=1..n.
+ 
+ 
+Es fácil ver que $\psi(\alpha e_k,\alpha e_{k+n})=\psi(e_k,e_{k+n})$, luego $\alpha \in  SP(2n,\mathbb{R})$.
+
+Con lo que $\tilde{D} = \alpha(D(\pounds)) $
+
+Pero entonces, $\tilde{D}=\frac{1}{d} D = \alpha(D(\pounds)) => D=\alpha(d D(\pounds))$
+
+
+Sea $\Gamma_{\pounds}$ = $<\cup_{i=1}^n \{(v_i,0),(v_i',0)\}>$
+\end{proof}
+
+
+
+
+
+
+ \newpage
+  \begin{thebibliography}{1}
+  \bibitem[To]{To} Tolimieri, R.   \emph{``Heisenberg manifolds and Theta functions''}, Trans. of the A.M.S Vol 239, 1978. (293-319)
+  \bibitem[Th]{Th} Thangavelu, S.  \emph{``Harmonic analisys on Heisenberg nilmanifolds''}, Real analisys and its applications
+  \bibitem[Ma]{Ma} Malcev, A. T.  \emph{``On a class of homogeneous spaces''}, Izv. Akad. Nauk SSSR Ser. Mat. 13(1949)
+  
+  \end{thebibliography}
+
+$$\begin{aligned}
+f((v,t) (v',s))&=\\
+f(v+v',t+s+ \frac{1}{2} \psi(v,v'))&=\\
+(A(v+v'),t+s+ \frac{1}{2} \psi(v,v'))&=\\
+(Av+Av',t+s+ \frac{1}{2} \psi(Av,Av'))&=\\
+(Av,t)(Av',s)&=f(v,t) f(v',s).\\
+\end{aligned}$$
+
+Afirmación 1: $D(l) \in HL(\mathbb{C}^n)$ 
  
  Sean $v,v' \in D(l)$
   $$\begin{aligned}
@@ -501,81 +526,6 @@ Fin Afirmación
    D(l) \in HL(\mathbb{C}^n)$
    
  Fin Afirmación 1
- \newline
- 
- Afirmación 2: $\psi(D(l),D(l))=l_1 \mathbb{Z}$
- 
- $\subseteq )$ Ya visto en Afirmación 1
- 
- $\supseteq )$ Sea $l_1$ m $\in l_1 \mathbb{Z}$
- 
- Definimos $v'=m e_1$ y  $v=l_1 e_{n+1}$
- 
- $\psi(v,v') = \psi(l_1 e_{n+1},m e_1)= (l_1,0,...,0) (m,0,...0) - (0,...,0) (0,...,0)=m l_1 \Rightarrow m l_1 \in \psi(D(l),D(l))$
- 
- Fin Afirmación  
-  
-\end{example}
-
- Observación: En el lema $\ref{1.8}$ vimos que si $D(l) \in HL(\mathbb{C}^n)$ entonces admitía una descomposición de la forma 
- $<v_1,v_1'>\oplus ... <v_n,v_n'>= D(l)$
- 
- En el ejemplo anterior, $v_i=l_i e_{i+1}$ y $v_i'=e_i$
- 
-
-\begin{theorem}
- Para cada $D \in HL(\mathbb{C}^n)$ existe una única $l \in Z_n^{\#}$, un único $d \in \mathbb{R}_{>0}$ y un $\alpha \in SP(2n,\mathbb{R})$ tal que:
- 
- $D=\alpha(d D(l))$
-\end{theorem}
-
-\begin{proof}
- Sea $D \in HL(\mathbb{C}^n), \psi(D,D)=d^2 \mathbb{Z}$. Tomando un isomorfismo que $v \mapsto \frac{1}{d} v$, puedo pensar $d^2=1 (d\in \mathbb{R}_{>0})$
- 
- Por el lema $\ref{1.8}$, $\tilde{D}:= \frac{1}{d} D =  <v_1,v_1'> \oplus...\oplus <v_n,v_n'>$ con $l_i=\psi(v_i,v_i')$, únicos. 
- 
- Definimos $l:=(l_1,...,l_n) \in \mathbb{Z}_n^{\#}$
- 
- %Sea $v:=(v_1,...,v_n)$ y $v'=(v_1',...,v_n')$
- 
- Recordemos que $v_i,v_i' \in \mathbb{C}^n \simeq \mathbb{R}^{2n}$
- 
- Notación: $v_i=(v_i^1,..,v_i^{2n})$ con $v_i^j \in \mathbb{R}$ y $v_i'=((v_i')^1,..,(v_i')^{2n})$ con $(v_i')^j \in \mathbb{R}$
- 
- Sea 
- $$\alpha:= \begin{bmatrix}
- v_1^1 & ... &v_n^1 & \frac{(v_1')^1}{l_1} &... &\frac{(v_n')^1}{l_n} &\\ 
- .& ... &. &. &... &. &\\
- .& ... &. &. &... &. &\\
- .& ... &. &. &... &. &\\
- .& ... &. &. &... &. &\\
- .& ... &. &. &... &. &\\
- v_1^{2n}&...&v_n^{2n} &\frac{(v_1')^{2n}}{l_1}  &...&\frac{(v_n')^{2n}}{l_1}  &\\ 
-\end{bmatrix}
-$$
-Con $\alpha$ así definido , tenemos que :
-
-$\alpha \in  SP(2n,\mathbb{R})$
-
-$\tilde{D} = \alpha(D(l)) $
-
-Pero entonces, $\tilde{D}=\frac{1}{d} D = \alpha(D(l)) => D=\alpha(d D(l))$
-\end{proof}
-
-
-
-
-
-
- \newpage
-  \begin{thebibliography}{1}
-  \bibitem[To]{To} Tolimieri, R.   \emph{``Heisenberg manifolds and Theta functions''}, Trans. of the A.M.S Vol 239, 1978. (293-319)
-  \bibitem[Th]{Th} Thangavelu, S.  \emph{``Harmonic analisys on Heisenberg nilmanifolds''}, Real analisys and its applications
-  \bibitem[Ma]{Ma} Malcev, A. T.  \emph{``On a class of homogeneous spaces''}, Izv. Akad. Nauk SSSR Ser. Mat. 13(1949)
-  
-  \end{thebibliography}
-
-
 \end{document}
 
 
